--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
+authors = ["Samuel Laurén <samuel.lauren@iki.fi>", "Darryl Mocek <dmocek@yahoo.com>"]
 categories = ["command-line-utilities"]
-description = "Utility for launching applications or focusing their windows"
+description = "Utility for launching applications, focusing their windows, if they're already running, and cycling between open windows of the same app."
 keywords = [
     "utility",
     "launcher",
@@ -9,16 +9,16 @@ keywords = [
     "window-management",
 ]
 license = "GPL-3.0"
-name = "run-or-raise"
+name = "raisen"
 readme = "README.md"
-homepage = "https://soft.github.io/run-or-raise/"
-repository = "https://github.com/Soft/run-or-raise"
+homepage = "https://github.com/dmocek/raisen"
+repository = "https://github.com/dmocek/raisen"
 version = "0.3.4"
 exclude = ["_config.yml"]
 edition = "2021"
 
 [badges.travis-ci]
-repository = "Soft/run-or-raise"
+repository = "dmocek/raisen"
 
 [dependencies]
 encoding = "0.2"
