--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,9 @@ edition = "2021"
 repository = "dmocek/raisen"
 
 [dependencies]
-encoding = "0.2"
 anyhow = "1"
+daemonize= "0.5.0"
+encoding = "0.2"
 lazy_static = "1"
 nom = "7"
 regex = "1"
