--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,12 @@ repository = "dmocek/raisen"
 anyhow = "1"
 daemonize= "0.5.0"
 encoding = "0.2"
+env_logger = "0.10.0"
 lazy_static = "1"
+log = "0.4.17"
 nom = "7"
 regex = "1"
+syslog = "6.1.0"
 xcb = "1"
 
 [profile.release]
